--- a/finchcollector/main_app/templates/finches/detail.html
+++ b/finchcollector/main_app/templates/finches/detail.html
@@ -14,6 +14,13 @@
     <p>Age: Smol Boye</p>
     {% endif %}
   </div>
+  <!-- Add the following markup -->
+  <div class="card-action">
+    <a href="{% url 'finches_update' finch.id %}">Edit</a>
+    <a href="{% url 'finches_delete' finch.id %}">Delete</a>
+  </div>
+  <!-- New markup above -->
+</div>
 </div>
 
 
